# nyc311-request-data-pipeline

./: .gitignore  Dockerfile  Dockerfile.app  README.md  config.py  constants.py  date_utils.py  db.py  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  extract.py  extractor.py  logger.py  main.py  metadata.py  process.py  pyproject.toml  requirements.txt  transform.py  uploader.py  utils.py  validate.py
.github/workflows/: deploy.yml
backend/: Dockerfile  config.py  dependencies.py  main.py  pyproject.toml
backend/routers/: agency.py  backlog.py  borough.py  complaints.py  health.py  overview.py
backend/schema/: agency.py  backlog.py  borough.py  complaints.py  day_of_week.py  overview.py
backend/services/: agency_service.py  backlog_service.py  borough_service.py  complaints_service.py  day_of_week_service.py  overview_service.py
config/: airflow.cfg  config.yml
data-pipeline/: Dockerfile  pyproject.toml
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
models/: __init__.py  extraction_metadata.py
pipeline/: Dockerfile  init.sh  pyproject.toml
pipeline/dags/: nyc_311_backfill_dag.py  nyc_311_dag.py  nyc_311_daily_dag.py
pipeline/dags/shared/: spark_tasks.py  tasks.py
pipeline/ingestion/: historical_ingest.py  incremental_ingest.py  nyc_311_api_ingest.py
pipeline/metadata/: init.py  models.py  service.py
pipeline/nyc311/ingestion/: api.py  ingest.py
pipeline/nyc311/jobs/: load.py  transform.py
pipeline/nyc311/transforms/: clean.py  enrich.py
pipeline/nyc311/utils/: config.py  db.py  log.py  s3.py
pipeline/spark_jobs/: session.py
pipeline/spark_jobs/gold/: build_nyc311_requests_daily.py  nyc311_requests_daily_gold.py
pipeline/spark_jobs/staging/: nyc311_requests_daily_staging.py
pipeline/spark_jobs/transforms/: clean_nyc311_requests.py  enrich_nyc311_requests.py
pipeline/sql/: 01_create_schemas.sql  02_create_dim_tables.sql  02_create_metadata_table.sql  03_create_nyc311_requests_daily.sql  04_create_nyc311_requests_daily_summary.sql  04_create_v_requests_daily.sql  05_create_nyc311_requests_weekly.sql  05_create_v_requests_7d.sql  06_create_v_requests_30d.sql  06_create_views.sql  07_create_v_requests_by_borough.sql  08_create_v_requests_by_complaint_type.sql  09_create_v_requests_by_agency.sql  10_create_v_requests_by_day_of_week.sql  11_create_v_backlog_aging.sql
pipeline/tests/ingestion/: test_api.py  test_nyc_311_api_ingest.py
pipeline/utils/: cloud.py  config.py  db.py  http.py  spark.py
scripts/: ingest_311.py  process_311.py
transform/: cleaning.py  config.py  paths.py  pipeline.py  schema.py
utils/: config.py
(+87 files in other folders)
