[project]
name = "nyc311-kafka-airflow-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow-providers-apache-spark>=5.5.0",
    "boto3>=1.42.73",
    "boto3-stubs~=1.42.73",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pyspark>=4.1.1",
    "tqdm>=4.67.3",
    "urllib3>=2.6.3",
]
