[project]
name = "nyc311-kafka-airflow-spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "apache-airflow>=3.1.8",

    "boto3>=1.42.73",
    "boto3-stubs~=1.42.73",
    "dotenv>=0.9.9",
    "grpcio>=1.48.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "protobuf>=4.21.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "pyspark==3.5.0",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.47",
    "tqdm>=4.67.3",
    "urllib3>=2.6.3",
    "zstandard>=0.25.0",
]
