[project]
name = "nyc311-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.0",
    "apache-airflow-providers-fab>=3.6.1",
    "apache-airflow-providers-postgres>=6.6.3",
    "boto3>=1.42.88",
    "pandas>=3.0.2",
    "pyarrow>=19.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.38",
    "urllib3>=2.6.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
